# Hazel

./: CMakeLists.txt  README.md  vcpkg.json
Hazel/: CMakeLists.txt
Hazel/include/: api.h
Hazel/src/: api.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
